# flix-test-ci

./: .gitignore  README.md  color.md  command.txt  distribute_options.yaml  flix_win_pac.iss  libflix.md  pubspec.yaml
.github/workflows/: all.yaml  android.yml  auto_i10n.yml  auto_l10n.yml  darwin.yml  debug.yml  ios.yml  linux.yml  main.yaml  release.yaml  windows.yml
android/: .gitignore  build.gradle  key.properties  settings.gradle
android/app/: build.gradle  flix.keystore  google-services.json  proguard-rules.pro
assets/animations/: radar.json
assets/images/: NOTICES.txt
doc/: RIverpod.md  Rust 基建.md  国际化.md
flix_rust/: .metadata  README.md  flutter_rust_bridge.yaml  pubspec.yaml
flix_rust/android/: build.gradle  settings.gradle
flix_rust/ios/: flix_rust.podspec
flix_rust/lib/: flix_rust.dart  image_compress.dart
flix_rust/linux/: CMakeLists.txt
flix_rust/macos/: flix_rust.podspec
flix_rust/rust/: Cargo.toml
flix_rust/rust/src/: frb_generated.rs  lib.rs
flix_rust/rust/src/image_compress/: image_compress.rs  mod.rs
flix_rust/windows/: CMakeLists.txt
ios/: GithubActionsExportOptions.plist  Podfile  firebase_app_id_file.json
l10n/: intl_en.arb  intl_ja.arb  intl_zh_CN.arb
lib/: firebase_options.dart  main.dart  resource_extension.dart
linux/: CMakeLists.txt  my_application.cc
macos/: firebase_app_id_file.json
make/: pubspec.yaml
scripts/: Installer.sln  cleanup.ps1
test/: main_test.dart  test_port_discover_impl.dart  test_string_util.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+371 files in other folders)
